app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-any-type/check/patmat.check
testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-any-type/src/patmat.cal:6:22: error: case may not be exhaustive.
It would fail on pattern: _
                case n of
                     ^ 